@@ -2393,7 +2393,7 @@ th {
 
 .collection {
   margin: 0.5rem 0 1rem 0;
-  border: 1px solid #e1dede;
+  border: 1px solid #e3e3e3;
   border-radius: 2px;
   overflow: hidden;
   position: relative; }
@@ -2402,7 +2402,7 @@ th {
     line-height: 1.5rem;
     padding: 10px 20px;
     margin: 0;
-    border-bottom: 1px solid #e1dede; }
+    border-bottom: 1px solid #e3e3e3; }
     .collection .collection-item.avatar {
       min-height: 84px;
       padding-left: 72px;
@@ -2444,7 +2444,7 @@ th {
       background-color: #ddd; }
   .collection.with-header .collection-header {
     background-color: #fff;
-    border-bottom: 1px solid #e1dede;
+    border-bottom: 1px solid #e3e3e3;
     padding: 10px 20px; }
   .collection.with-header .collection-item {
     padding-left: 30px; }
@@ -4519,7 +4519,7 @@ input[type=range]:focus::-ms-fill-upper {
     background-position: 100% 0; } }
 
 body {
-  background-color: #f7f6f6;
+  background-color: #fafafa;
   color: #222; }
 
 h1, h2, h3, h4, h5 {
@@ -4543,7 +4543,7 @@ pre {
 
 pre.stylish {
   padding: 0.2rem 0.5rem;
-  background: #edebeb;
+  background: #f0f0f0;
   margin: 0.3rem 0; }
 
 dl.horizontal {
@@ -4825,7 +4825,7 @@ ul.complete-dropdown {
   bottom: 0; }
 
 .convos-input {
-  background-color: #f7f6f6;
+  background-color: #fafafa;
   border-top: 1px solid #d1d1d1;
   padding: 8px 0.75rem 0 0.75rem;
   width: 100%;
@@ -4833,7 +4833,7 @@ ul.complete-dropdown {
   bottom: 0;
   z-index: 899; }
   .convos-input.loading {
-    background: repeating-linear-gradient(-45deg, #f7f6f6, #f7f6f6 10px, whitesmoke 10px, whitesmoke 20px, #f7f6f6 20px) top left;
+    background: repeating-linear-gradient(-45deg, #fafafa, #fafafa 10px, #f2f2f2 10px, #f2f2f2 20px, #fafafa 20px) top left;
     background-position: 0 0;
     background-size: 394px 100%;
     animation: background-position 14s infinite linear; }
@@ -4876,7 +4876,7 @@ ul.complete-dropdown {
   clear: both;
   display: block;
   position: relative;
-  margin: 8px 0;
+  padding: 4px 0;
   word-wrap: break-word; }
   .convos-message.error, .convos-message.notice {
     padding-left: 0.75rem;
@@ -4891,22 +4891,25 @@ ul.complete-dropdown {
     font-size: 0.8rem;
     text-align: center;
     border-bottom: 1px solid #dbdbdb;
-    margin: -0.6rem 0 0 0;
-    height: 0.6rem; }
+    margin: -0.2rem 0 0.5rem 0;
+    height: 0.9rem; }
     .convos-message.day-changed:hover {
       background: transparent; }
     .convos-message.day-changed span {
-      background: #f7f6f6;
-      padding: 0 8px; }
+      background: #fafafa;
+      padding: 0 8px;
+      line-height: 1rem; }
   .convos-message.error {
     border-left: 2px solid #E57373;
     color: #888888; }
     .convos-message.error a {
       color: #e55454; }
-  .convos-message.highlight .message {
+  .convos-message.highlight {
     background-color: #ffd7db;
-    margin-left: -0.5rem;
-    padding-left: 0.5rem; }
+    margin-left: -0.375rem;
+    margin-right: -0.375rem;
+    padding-left: 0.375rem;
+    padding-right: 0.375rem; }
   .convos-message.action.highlight .message {
     margin-left: 0;
     padding-left: 0; }
@@ -4944,8 +4947,8 @@ ul.complete-dropdown {
     font-size: 18px;
     margin-left: 4px; }
   .convos-message code {
-    background: #ebe9e9;
-    outline: 1px solid #d3cece;
+    background: #ededed;
+    outline: 1px solid #d4d4d4;
     padding: 1px 3px; }
   .convos-message .secondary-content {
     padding-top: 2px; }
@@ -5088,8 +5091,8 @@ body.notouch header a:hover {
 
 blockquote.le-card,
 div.le-card {
-  background: #fcfcfc;
-  border: 1px solid #ebebeb;
+  background: #f2f2f2;
+  border: 1px solid #e1e1e1;
   padding: 0.5rem;
   margin: 0.3rem 0; }
 
@@ -5202,7 +5205,7 @@ div.paste {
 .convos-main-menu,
 .is-sidebar {
   width: 100%;
-  background-color: #f7f7f7;
+  background-color: whitesmoke;
   position: absolute;
   top: 56px;
   bottom: 0;
@@ -5231,9 +5234,9 @@ div.paste {
       padding: 0.75rem;
       display: block; }
     .convos-main-menu .link:hover, .convos-main-menu .link.focus {
-      background-color: #e8e8e8; }
+      background-color: #e6e6e6; }
     .convos-main-menu .link.active {
-      background-color: #f7f6f6; }
+      background-color: #fafafa; }
       .convos-main-menu .link.active a {
         color: #244d26;
         font-weight: bold; }
@@ -5279,8 +5282,8 @@ div.paste {
 
 .convos-sidebar-info .menu-item,
 .convos-notifications .menu-item {
-  border-top: 1px solid #ebebeb;
-  border-bottom: 1px solid #ebebeb;
+  border-top: 1px solid #e8e8e8;
+  border-bottom: 1px solid #e8e8e8;
   margin-top: -1px;
   padding: 0 0.75rem;
   overflow: hidden; }
@@ -5290,7 +5293,7 @@ div.paste {
     line-height: 2.1rem; }
   .convos-sidebar-info .menu-item:hover,
   .convos-notifications .menu-item:hover {
-    background-color: #e8e8e8; }
+    background-color: #e6e6e6; }
   .convos-sidebar-info .menu-item .material-icons, .convos-sidebar-info .menu-item .le-paste .le-meta::before, .le-paste .convos-sidebar-info .menu-item .le-meta::before,
   .convos-notifications .menu-item .material-icons,
   .convos-notifications .menu-item .le-paste .le-meta::before, .le-paste
@@ -5313,7 +5316,7 @@ div.paste {
   cursor: pointer;
   padding-top: 4px;
   padding-bottom: 8px;
-  border-bottom: 1px solid #e8e8e8; }
+  border-bottom: 1px solid #e6e6e6; }
   .convos-sidebar-info .notification h5, .convos-sidebar-info .notification .secondary-content,
   .convos-notifications .notification h5,
   .convos-notifications .notification .secondary-content {
@@ -5355,4 +5358,4 @@ body.notouch .convos-main-menu .link.dialog:hover .n-unread {
 html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif; }
 
-/*# sourceMappingURL=../bd19ff1197/main.css.map */
+/*# sourceMappingURL=../a488e31529/main.css.map */
