@@ -100,7 +100,7 @@ $convos-input-height: 46px;
   clear: both;
   display: block;
   position: relative;
-  margin: $dialog-spacing * 2 0;
+  padding: $dialog-spacing 0;
   word-wrap: break-word;
 
   &.error, &.notice {
@@ -121,20 +121,22 @@ $convos-input-height: 46px;
     font-size: 0.8rem;
     text-align: center;
     border-bottom: 1px solid lighten($input-border-color, 24%);
-    margin: -0.6rem 0 0 0;
-    height: 0.6rem;
+    margin: -0.2rem 0 0.5rem 0;
+    height: 0.9rem;
     &:hover { background: transparent; }
-    span { background: $body-bg; padding: 0 8px; }
+    span { background: $body-bg; padding: 0 8px; line-height: 1rem; }
   }
   &.error {
     border-left: 2px solid $error-border-color;
     color: $notice-text-color;
     a { color: lighten($error-text-color, 20%); }
   }
-  &.highlight .message {
+  &.highlight {
     background-color: $highlight-bg-color;
-    margin-left: -0.5rem;
-    padding-left: 0.5rem;
+    margin-left: -($gutter-width / 4);
+    margin-right: -($gutter-width / 4);
+    padding-left: ($gutter-width / 4);
+    padding-right: ($gutter-width / 4);
   }
   &.action.highlight .message {
     margin-left: 0;
