@@ -1,5 +1,5 @@
-$body-bg: #f7f6f6 !default;
-$sidebar-bg: darken(#fff, 3%) !default;
+$body-bg: #fafafa !default;
+$sidebar-bg: darken(#fff, 4%) !default;
 $primary-color: lighten(#2c5e2e, 10%) !default;
 $secondary-color: #2c5e2e !default;
 $header-color: lighten($primary-color, 5%) !default;
