@@ -2,6 +2,8 @@ Revision history for perl distribution Convos
 
 0.99_31 Not Released
  - Fix rendering "404 not found" on unknown paste
+ - Fix background colors for chat and embeds
+ - Improved rendering of highlight messages
 
 0.99_30 2017-04-13T13:52:44+0200
  - Fix scrolling on "Join dialog" and "Help" pages #331
